--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "next": "15.0.3",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "raw-loader": "^4.0.2",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
