--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "^9.0.1",
-    "rehype-raw": "^7.0.0"
+    "rehype-raw": "^7.0.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
