--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exifoo-website",
-  "version": "0.1.0-alpha",
+  "version": "0.1.0",
   "description": "The website of exifoo, a tool to organize your photos.",
   "author": {
     "name": "Andrin Schaller",
