Fix curl not following redirects for supabase keep-alive

--- a/.github/workflows/supabase-keep-alive.yml
+++ b/.github/workflows/supabase-keep-alive.yml
@@ -11,4 +11,4 @@ jobs:
 
     steps:
       - name: Send HTTP Request
-        run: curl https://exifoo.com/api/supabase-keep-alive
+        run: curl -L https://exifoo.com/api/supabase-keep-alive
