--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "18.3.1",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
