--- a/.github/workflows/supabase-keep-alive.yml
+++ b/.github/workflows/supabase-keep-alive.yml
@@ -2,7 +2,7 @@ name: Supabase Keep Alive
 
 on:
   schedule:
-    - cron: "0 0 * * 0,3" # runs every Sunday and Wednesday
+    - cron: "0 0 * * 0,2,5" # runs every Sunday, Tuesday, and Friday
   workflow_dispatch:
 
 jobs:
