--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.12",
+    "@vercel/speed-insights": "^1.2.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
     "next": "15.0.3",
