--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bump:dev": "npm version $npm_config_vers --git-tag-version false && git commit -a -m 'Bump version to development'"
   },
   "dependencies": {
+    "@next/third-parties": "^15.2.3",
     "@supabase/supabase-js": "^2.47.12",
     "@vercel/speed-insights": "^1.2.0",
     "flowbite-react": "^0.10.2",
